[gd_scene load_steps=2 format=3 uid="uid://b1tpksvesmqpu"]

[ext_resource type="Script" uid="uid://dkckr06kp84h2" path="res://scripts/zone_editor_ui.gd" id="1_qeblh"]

[node name="ZoneEditorUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_qeblh")

[node name="Panel" type="Panel" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 325.0
offset_bottom = 575.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "生成区域编辑器"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "区域列表:"

[node name="ZoneList" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PositionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "位置:"

[node name="PositionContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="XLabel" type="Label" parent="Panel/VBoxContainer/PositionContainer"]
layout_mode = 2
text = "X:"

[node name="X" type="LineEdit" parent="Panel/VBoxContainer/PositionContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "X坐标"

[node name="YLabel" type="Label" parent="Panel/VBoxContainer/PositionContainer"]
layout_mode = 2
text = "Y:"

[node name="Y" type="LineEdit" parent="Panel/VBoxContainer/PositionContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Y坐标"

[node name="SizeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "大小:"

[node name="SizeContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="XLabel" type="Label" parent="Panel/VBoxContainer/SizeContainer"]
layout_mode = 2
text = "宽:"

[node name="X" type="LineEdit" parent="Panel/VBoxContainer/SizeContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "宽度"

[node name="YLabel" type="Label" parent="Panel/VBoxContainer/SizeContainer"]
layout_mode = 2
text = "高:"

[node name="Y" type="LineEdit" parent="Panel/VBoxContainer/SizeContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "高度"

[node name="TypesLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "允许生成物类型:"

[node name="TypesContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TreeToggle" type="CheckBox" parent="Panel/VBoxContainer/TypesContainer"]
layout_mode = 2
text = "树"

[node name="FlowerToggle" type="CheckBox" parent="Panel/VBoxContainer/TypesContainer"]
layout_mode = 2
text = "花"

[node name="BirdToggle" type="CheckBox" parent="Panel/VBoxContainer/TypesContainer"]
layout_mode = 2
text = "鸟"

[node name="ColorLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "区域颜色:"

[node name="ColorContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ColorPicker" type="ColorPickerButton" parent="Panel/VBoxContainer/ColorContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.2, 0.8, 0.2, 0.3)

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VisibilityToggle" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "显示/隐藏区域"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "保存配置"

[node name="NewZoneButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "新建区域"

[node name="DeleteZoneButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "删除区域"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "关闭"
